# ataraxia

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ataraxia/: __init__.py  core.py
src/ataraxia/: __init__.py  constants.py  core.py  responses.py
src/ataraxia/helper/: __init__.py  formatter.py  json.py
