[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ataraxia"
version = "1.1.6"
description = "Unofficial Python wrapper for Blackbox AI"
readme = "README.md"
authors = [
    { name = "Alfi Syahri", email = "alfisyahri.official@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.32.2",
    "validators>=0.34.0"
]

[project.urls]
Homepage = "https://github.com/syxhri/ataraxia"
Issues = "https://github.com/syxhri/ataraxia/issues"
Repository = "https://github.com/syxhri/ataraxia.git"
